--- a/block-editor.html
+++ b/block-editor.html
@@ -71,45 +71,43 @@
 	</div>
 
 	<!-- Main component for a primary marketing message or call to action -->
-	<h1>
-		jQuery-Sortable
-    </h1>
-	<p>A flexible, opinionated sorting with nested! plugin for jQuery.<br>
-	<a href="http://johnny.github.io/jquery-sortable/" target="_blank">http://johnny.github.io/jquery-sortable/</a></p>
-	<ol class="block-code">
-	  <li>
-		Tokyo
-		<ol></ol>
-	  </li>
-	  <li>
-		London
-		<ol></ol>
-	  </li>
-	  <li>
-		New-york
-		<ol>
-		  <li>Apple</li>
-		  <li>Orange</li>
-		  <li>
-			Strawberry
-			<ol>
-			  <li>First</li>
-			  <li>Second</li>
-			</ol>
-			<ol>
-			  <li>First</li>
-			  <li>Second</li>
-			</ol>
-		  </li>
-		</ol>
-	  </li>
-	  <li>paris</li>
-	  <li>hanoi</li>
-	  <li>dobai</li>
-	</ol>
-
+	 <div class="row">
+		<div class="col-md-2">code pallet</div>
+		<div class="col-md-10">
+				<ol class="block-code">
+				  <li>
+					Tokyo
+					<ol></ol>
+				  </li>
+				  <li>
+					London
+					<ol></ol>
+				  </li>
+				  <li>
+					New-york
+					<ol>
+					  <li>Apple</li>
+					  <li>Orange</li>
+					  <li>
+						Strawberry
+						<ol>
+						  <li>First</li>
+						  <li>Second</li>
+						</ol>
+						<ol>
+						  <li>First</li>
+						  <li>Second</li>
+						</ol>
+					  </li>
+					</ol>
+				  </li>
+				  <li>paris</li>
+				  <li>hanoi</li>
+				  <li>dobai</li>
+				</ol>
+			</div>
+		</div>
     </div> <!-- /container -->
-
 
     <!-- Bootstrap core JavaScript
     ================================================== -->
