--- a/block-editor.html
+++ b/block-editor.html
@@ -72,9 +72,15 @@
 
 	<!-- Main component for a primary marketing message or call to action -->
 	 <div class="row">
-		<div class="col-md-2">code pallet</div>
-		<div class="col-md-10">
-				<ol class="block-code">
+		<div class="col-md-2">Pallet:
+			<ol class="pallet-code connect-area">
+				<li>Sapporo</li>
+				<li>Nagoya</li>
+				<li>Osaka</li>
+			<ol>
+		</div>
+		<div class="col-md-10">Edit Area:
+				<ol class="block-code connect-area">
 				  <li>
 					Tokyo
 					<ol></ol>
@@ -117,6 +123,13 @@
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
     <script src="lib/js/ie10-viewport-bug-workaround.js"></script>
 	<script type="text/javascript" src="lib/js/jquery-sortable.js"></script>
-	<script type="text/javascript">$('ol.block-code').sortable();</script>
+	<script type="text/javascript">$('ol.pallet-code').sortable({
+		group: 'connect-area',
+		drop: false,
+	});
+	
+	$('ol.block-code').sortable({
+		group: 'connect-area',
+	});</script>
   </body>
 </html>
