--- a/block-editor.html
+++ b/block-editor.html
@@ -123,13 +123,23 @@
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
     <script src="lib/js/ie10-viewport-bug-workaround.js"></script>
 	<script type="text/javascript" src="lib/js/jquery-sortable.js"></script>
-	<script type="text/javascript">$('ol.pallet-code').sortable({
+	<script type="text/javascript">
+	$('ol.pallet-code').sortable({
 		group: 'connect-area',
 		drop: false,
+		onDragStart: function ($item, container, _super, event) {
+			$item.css({
+				height: $item.height(),
+				width: $item.width()
+			})
+			$item.addClass("dragged")
+			$("body").addClass("dragging")
+		}
 	});
-	
+
 	$('ol.block-code').sortable({
 		group: 'connect-area',
-	});</script>
+	});
+	</script>
   </body>
 </html>
