--- a/block-editor.html
+++ b/block-editor.html
@@ -72,7 +72,7 @@
 
 	<!-- Main component for a primary marketing message or call to action -->
 	 <div class="row">
-		<div class="col-md-2">Pallet:
+		<div class="col-md-2">Code Pallet:
 			<ol class="pallet-code connect-area">
 				<li>Sapporo</li>
 				<li>Nagoya</li>
@@ -127,18 +127,17 @@
 	$('ol.pallet-code').sortable({
 		group: 'connect-area',
 		drop: false,
-		onDragStart: function ($item, container, _super, event) {
-			$item.css({
-				height: $item.height(),
-				width: $item.width()
-			})
-			$item.addClass("dragged")
-			$("body").addClass("dragging")
+		onDragStart: function (item, container, _super) {
+			// Duplicate items of the no drop area
+			if(!container.options.drop) {
+				item.clone().insertAfter(item)
+			}
+			_super(item)
 		}
 	});
 
 	$('ol.block-code').sortable({
-		group: 'connect-area',
+		group: 'connect-area'
 	});
 	</script>
   </body>
