change pallet name and so on.

--- a/block-editor.html
+++ b/block-editor.html
@@ -19,7 +19,7 @@
     <link href="lib/css/jquery-sortable.css" rel="stylesheet">
 	
     <!-- Just for debugging purposes. Don't actually copy these 2 lines! -->
-    <!--[if lt IE 9]><script src="lib/js/ie8-responsive-file-warning.js"></script><![endif]-->
+    <!--[if lt IE 9]><script src="lib/js/ie8-responsive-file-warning.js"></script><![endif]<!-- 
     <script src="lib/js/ie-emulation-modes-warning.js"></script>
 
     <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
