--- a/block-editor.html
+++ b/block-editor.html
@@ -72,25 +72,29 @@
 
 	<!-- Main component for a primary marketing message or call to action -->
 	 <div class="row">
-		<div class="col-md-2" id="accordion">Code Pallet:
-			<h3>First</h3>
-			<div>
-			<ol class="pallet-code connect-area">
-				<li>Sapporo</li>
-				<li>Nagoya</li>
-				<li>Osaka</li>
-			</ol>
-			</div>
-			<h3>Second</h3>
-			<div>
-			<ol class="pallet-code connect-area">
-				<li>Sapporo</li>
-				<li>Nagoya</li>
-				<li>Osaka</li>
-			</ol>
+		<div class="col-md-2">
+		<h4>Pallet</h4>
+			<div id="accordion">
+				<h5>First</h5>
+				<div>
+					<ol class="pallet-code connect-area">
+						<li>Sapporo</li>
+						<li>Nagoya</li>
+						<li>Osaka</li>
+					</ol>
+				</div>
+				<h5>Second</h5>
+				<div>
+					<ol class="pallet-code connect-area">
+						<li>Sapporo</li>
+						<li>Nagoya</li>
+						<li>Osaka</li>
+					</ol>
+				</div>
 			</div>
 		</div>
-		<div class="col-md-10">Edit Area:
+		<div class="col-md-10">
+		<h4>Edit Area</h4>
 				<ol class="block-code connect-area">
 				  <li>
 					Tokyo
@@ -118,9 +122,9 @@
 					  </li>
 					</ol>
 				  </li>
-				  <li>paris</li>
-				  <li>hanoi</li>
-				  <li>dobai</li>
+				  <li>Paris</li>
+				  <li>Hanoi</li>
+				  <li>Dobai</li>
 				</ol>
 			</div>
 		</div>
