--- a/block-editor.html
+++ b/block-editor.html
@@ -79,16 +79,16 @@
 				<div>
 					<ol class="pallet-code connect-area">
 						<li>Sapporo</li>
+						<li>Yokohama</li>
 						<li>Nagoya</li>
-						<li>Osaka</li>
 					</ol>
 				</div>
 				<h5>Second</h5>
 				<div>
 					<ol class="pallet-code connect-area">
-						<li>Sapporo</li>
-						<li>Nagoya</li>
 						<li>Osaka</li>
+						<li>Hirosima</li>
+						<li>Fukuoka</li>
 					</ol>
 				</div>
 			</div>
@@ -124,7 +124,7 @@
 				  </li>
 				  <li>Paris</li>
 				  <li>Hanoi</li>
-				  <li>Dobai</li>
+				  <li>obai</li>
 				</ol>
 			</div>
 		</div>
@@ -134,11 +134,11 @@
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+	<script src="lib/js/jquery-ui.min.js"></script>
     <script src="lib/js/bootstrap.min.js"></script>
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
     <script src="lib/js/ie10-viewport-bug-workaround.js"></script>
 	<script type="text/javascript" src="lib/js/jquery-sortable.js"></script>
-	<script src="lib/jquery-ui/jquery-ui.js"></script>
 	<script type="text/javascript">
 	$('#accordion').accordion();
 
