--- a/block-editor.html
+++ b/block-editor.html
@@ -34,7 +34,7 @@
 	<div class="container">
 
 		<!-- Static navbar -->
-		<div class="navbar navbar-default navbar-fixed-top" role="navigation">
+		<div class="navbar navbar-inverse navbar-embossed navbar-fixed-top" role="navigation">
 			<div class="container-fluid">
 			  <div class="navbar-header">
 				<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target=".navbar-collapse">
