--- a/block-editor.html
+++ b/block-editor.html
@@ -93,6 +93,8 @@
 							</ol>
 						</div>
 					</div>
+					<hr size="3">
+					<p><a class="trash" href="#"></a>
 				</div>
 			</div>
 			<!-- Main Edit Area -->
