add icon for acordion on code-pallete

--- a/block-editor.html
+++ b/block-editor.html
@@ -75,12 +75,16 @@
 			<!-- Side code pallet -->
 			<div class="col-md-2">
 			<div class="sidebar-nav affix" role="complementary">
-			  <div class="panel-group" id="accordion2">
+			  <div class="panel-group" id="accordion">
 				<div class="panel panel-default">
-				  <a class="list-group-item" data-toggle="collapse" data-parent="#accordion2" href="#collapse21">
-					  Basic
-				  </a>
-				  <div id="collapse21" class="panel-collapse collapse in">
+				  <div class="panel-heading">
+					<h4 class="panel-title">
+						<a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#collapse11">
+							Basic
+						</a>
+					</h4>
+				  </div>
+				  <div id="collapse11" class="panel-collapse collapse in">
 					<div class="panel-body">
 						<ol class="pallet-code connect-area">
 							<li>Sapporo</li>
@@ -91,10 +95,14 @@
 				  </div><!-- panel-collapse -->
 				</div><!-- panel -->
 				<div class="panel panel-default">
-				  <a class="list-group-item" data-toggle="collapse" data-parent="#accordion2" href="#collapse22">
-					  Logic
-				  </a>
-				  <div id="collapse22" class="panel-collapse collapse">
+				  <div class="panel-heading">
+					<h4 class="panel-title">
+						<a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#collapse12">
+							Logic
+						</a>
+					</h4>
+				  </div>
+				  <div id="collapse12" class="panel-collapse collapse">
 					<div class="panel-body">
 						<ol class="pallet-code connect-area">
 							<li>Sapporo</li>
@@ -105,10 +113,14 @@
 				  </div><!-- panel-collapse -->
 				</div><!-- panel -->
 				<div class="panel panel-default">
-				  <a class="list-group-item" data-toggle="collapse" data-parent="#accordion2" href="#collapse23">
-					  Calc
-				  </a>
-				  <div id="collapse23" class="panel-collapse collapse">
+				  <div class="panel-heading">
+					<h4 class="panel-title">
+						<a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#collapse13">
+							Calc
+						</a>
+					</h4>
+				  </div>		
+				  <div id="collapse13" class="panel-collapse collapse">
 					<div class="panel-body">
 						<ol class="pallet-code connect-area">
 							<li>Sapporo</li>
